# routes/address_routes.go
@@ -9,9 +9,9 @@ import (
 func AlamatRoutes(app *fiber.App) {
 	alamat := app.Group("/api/v1/user/alamat", middleware.JWTMiddleware())
 
-	alamat.Get("/", controllers.GetListAddress)         // Get all addresses
-	alamat.Get("/:id", controllers.GetAlamatByID)       // Get address by ID
-	alamat.Post("/", controllers.CreateAlamat)          // Create new address
-	alamat.Put("/:id", controllers.UpdateAlamatByID)    // Update address by ID
-	alamat.Delete("/:id", controllers.DeleteAlamatByID) // Delete address by ID
+	alamat.Get("/", controllers.GetListAddress)
+	alamat.Get("/:id", controllers.GetAlamatByID)
+	alamat.Post("/", controllers.CreateAlamat)
+	alamat.Put("/:id", controllers.UpdateAlamatByID)
+	alamat.Delete("/:id", controllers.DeleteAlamatByID)
 }
